# pipremove

./: .gitignore  pipremove_v2.py  pyproject.toml
